MyProject/force-app/main/default/objects/Purchase_Order__c/fields/Total_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount2__c</fullName>
    <label>Total Amount2</label>
    <summarizedField>Purchase_Order_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>