MyProject/force-app/main/default/objects/Purchase_Order__c/recordTypes/Orders_placed_by_retail_customers.recordType-meta.xml
<RecordType>
    <fullName>Orders_placed_by_retail_customers</fullName>
    <active>true</active>
    <description>Orders placed in bulk by wholesale customers</description>
    <label>Orders placed by retail customers</label>
</RecordType>