MyProject/force-app/main/default/objects/Purchase_Order__c/recordTypes/Retail_Order.recordType-meta.xml
<RecordType>
    <fullName>Retail_Order</fullName>
    <active>true</active>
    <description>Orders placed by retail customers</description>
    <label>Retail Order</label>
</RecordType>